<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_PlaceName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_PlaceName"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Selected"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_PlaceNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_PlaceNameValue"
        app:layout_constraintStart_toEndOf="@+id/textView_PlaceName2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/String_Category"
        app:layout_constraintEnd_toStartOf="@+id/textView_CategoyValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_CategoyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/String_CategoryValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Latitude"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Selected"
        app:layout_constraintTop_toBottomOf="@+id/textView_PlaceName2" />

    <TextView
        android:id="@+id/textView_LatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_LatitudeValue"
        app:layout_constraintStart_toEndOf="@+id/textView_Latitude"
        app:layout_constraintTop_toBottomOf="@+id/textView_PlaceNameValue" />

    <TextView
        android:id="@+id/textView_LongitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/String_LongitudeValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CategoyValue" />

    <TextView
        android:id="@+id/textView_Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/String_Longitude"
        app:layout_constraintEnd_toStartOf="@+id/textView_LongitudeValue"
        app:layout_constraintTop_toBottomOf="@+id/textView_Category" />

    <CheckBox
        android:id="@+id/checkBox_Selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>